--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -35,10 +35,10 @@ jobs:
         git config --global user.name "3gZ2jA"
 
     - name: ls
-      run:  ls
+      run:  ls -la
 
     - name: Move wk
-      run: .github .github.bak
+      run: mv .github .github.bak
 
     - name: Load upstream commits
       run: git pull https://github.com/coolsnowwolf/lede.git --no-edit --strategy-option ours --allow-unrelated-histories
@@ -47,7 +47,7 @@ jobs:
       run: rm -rf ./.github
 
     - name: Move wk
-      run: .github.bak .github 
+      run: mv .github.bak .github 
 
     - name: Push Commits
       env:
