Signed-off-by: 3gZ2jA <lqbz@live.com>

--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -49,11 +49,14 @@ jobs:
     - name: Remove wk
       run: rm -rf ./.github
 
+    - name: Remove wk
+      run: rm -rf .github/workflows
+
     - name: Move wk
       run: mv .github.bak .github 
 
     - name: ls
-      run:  ls -la
+      run:  ls -la .github/workflows
 
     - name: Push Commits
       env:
