--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -9,10 +9,10 @@
 
 name: OpenWrt-CI
 
-on:
-  push:
-    branches: 
-      - master
+#on:
+  #push:
+  #  branches: 
+  #    - master
   # schedule:
   #   - cron: 0 20 * * *
   # release:
