--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -39,17 +39,17 @@ jobs:
           df -h
           echo "======================="
 
-      #- name: Space cleanup
-      #  env:
-      #    DEBIAN_FRONTEND: noninteractive
-      #  run: |
-      #    docker rmi `docker images -q`
-      #    sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-      #    sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-      #    sudo -E apt-get update
-      #    sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
-      #    sudo -E apt-get -y autoremove --purge
-      #    sudo -E apt-get clean
+      - name: Space cleanup
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        run: |
+          docker rmi `docker images -q`
+          sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
+          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+          sudo -E apt-get update
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
+          sudo -E apt-get -y autoremove --purge
+          sudo -E apt-get clean
 
           # sudo mkdir -p -m 777 /mnt/openwrt/bin /mnt/openwrt/build_dir/host /mnt/openwrt/build_dir/hostpkg /mnt/openwrt/dl /mnt/openwrt/feeds /mnt/openwrt/staging_dir
           # ln -s /mnt/openwrt/bin ./bin
@@ -67,10 +67,10 @@ jobs:
           df -h
           echo "======================="
 
-      #- name: Update feeds
-      #  run: |
-      #    ./scripts/feeds update -a
-      #    ./scripts/feeds install -a
+      - name: Update feeds
+        run: |
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
 
       - name: Generate configuration file
         run: |
@@ -207,28 +207,28 @@ jobs:
           sed -i 's/^[ \t]*//g' ./.config
           #make defconfig
 
-      #- name: Make download
-      #  run: |
-      #    make download -j8
-      #    find ./dl/ -size -1024c -exec rm -f {} \;
-
-      #- name: Compile firmware
-      #  run: |
-      #    make -j$(nproc) || make -j1 V=s
-      #    du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
-      #    du -h --max-depth=1 ./build_dir
-      #    du -h --max-depth=1 ./bin
-
-      - name: Fake compile firmware
+      - name: Make download
         run: |
-          mkdir ./build_dir
-          mkdir -p ./bin/targets/packages
-          touch ./bin/targets/config.seed
-          touch ./bin/targets/openwrt-x86-64-combined-squashfs.img
-          touch ./bin/targets/openwrt-x86-64-rootfs-squashfs.img 
+          make download -j8
+          find ./dl/ -size -1024c -exec rm -f {} \;
+
+      - name: Compile firmware
+        run: |
+          make -j$(nproc) || make -j1 V=s
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
+
+      #- name: Fake compile firmware
+      #  run: |
+      #    mkdir ./build_dir
+      #    mkdir -p ./bin/targets/packages
+      #    touch ./bin/targets/config.seed
+      #    touch ./bin/targets/openwrt-x86-64-combined-squashfs.img
+      #    touch ./bin/targets/openwrt-x86-64-rootfs-squashfs.img 
+      #    du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
+      #    du -h --max-depth=1 ./build_dir
+      #    du -h --max-depth=1 ./bin
 
       - name: Show disk space
         run: |
@@ -246,14 +246,14 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: OpenWrt firmware
-          path: ./bin/targets/
+          path: ./bin/targets/x86/64/
 
       - name: Zip files
         run: |
           echo "::set-env name=TAG::$(date "+%Y-%m-%dT%H-%M-%S")"
-          zip ./bin/targets/config.zip ./bin/targets/config.seed
-          zip ./bin/targets/openwrt-x86-64-combined-squashfs.zip ./bin/targets/openwrt-x86-64-combined-squashfs.img
-          zip ./bin/targets/openwrt-x86-64-rootfs-squashfs.zip ./bin/targets/openwrt-x86-64-rootfs-squashfs.img 
+          zip ./bin/targets/x86/64/config.zip ./bin/targets/x86/64/config.seed
+          zip ./bin/targets/x86/64/openwrt-x86-64-combined-squashfs.zip ./bin/targets/x86/64/openwrt-x86-64-combined-squashfs.img
+          zip ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.zip ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.img 
 
       - name: Create Release
         id: create_release
@@ -272,7 +272,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./bin/targets/config.zip
+          asset_path: ./bin/targets/x86/64/config.zip
           asset_name: config.zip
           asset_content_type: application/zip
 
@@ -282,7 +282,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./bin/targets/openwrt-x86-64-combined-squashfs.zip
+          asset_path: ./bin/targets/x86/64/openwrt-x86-64-combined-squashfs.zip
           asset_name: openwrt-x86-64-combined-squashfs.zip
           asset_content_type: application/zip
 
@@ -292,7 +292,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./bin/targets/openwrt-x86-64-rootfs-squashfs.zip
+          asset_path: ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.zip
           asset_name: openwrt-x86-64-rootfs-squashfs.zip
           asset_content_type: application/zip
 
