--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -253,7 +253,8 @@ jobs:
           echo "::set-env name=TAG::$(date "+%Y-%m-%dT%H-%M-%S")"
           zip ./bin/targets/x86/64/config.zip ./bin/targets/x86/64/config.seed
           zip ./bin/targets/x86/64/openwrt-x86-64-combined-squashfs.zip ./bin/targets/x86/64/openwrt-x86-64-combined-squashfs.img
-          zip ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.zip ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.img 
+          zip ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.zip ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.img
+          zip ./bin/targets/x86/64/openwrt-x86-64-uefi-gpt-squashfs.zip ./bin/targets/x86/64/openwrt-x86-64-uefi-gpt-squashfs.img 
 
       - name: Create Release
         id: create_release
@@ -294,6 +295,16 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./bin/targets/x86/64/openwrt-x86-64-rootfs-squashfs.zip
           asset_name: openwrt-x86-64-rootfs-squashfs.zip
+          asset_content_type: application/zip
+
+      - name: Upload openwrt-x86-64-uefi-gpt-squashfs
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./bin/targets/x86/64/openwrt-x86-64-uefi-gpt-squashfs.zip
+          asset_name: openwrt-x86-64-uefi-gpt-squashfs.zip
           asset_content_type: application/zip
 
 
