--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -12,8 +12,8 @@ on:
   push:
     branches: 
       - master
-  schedule:
-    - cron: 10/30 * * * *
+  #schedule:
+  #  - cron: 10/30 * * * *
 
 jobs:
   merge:
