--- a/.github/workflows/openwrt-ci-new.yml
+++ b/.github/workflows/openwrt-ci-new.yml
@@ -340,6 +340,12 @@ jobs:
           CONFIG_PACKAGE_nano=y
           CONFIG_PACKAGE_screen=y
           CONFIG_PACKAGE_bash=y
+          
+          # CONFIG_PACKAGE_autosamba is not set
+          # CONFIG_PACKAGE_luci-app-samba is not set
+          # CONFIG_PACKAGE_samba36-client is not set
+          # CONFIG_PACKAGE_samba36-net is not set
+          # CONFIG_PACKAGE_samba36-server is not set
           EOF
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
@@ -433,7 +439,7 @@ jobs:
       
       - name: Zip files
         run: |
-          echo "::set-env name=TAG::$(date "+%Y-%m-%dT%H-%M-%S")"
+          echo "::set-env name=TAG::$(date "+%F/%H-%M-%S")"
           zip ./targets/config.zip ./targets/config.seed
           zip ./targets/openwrt-x86-64-combined-squashfs.zip ./targets/openwrt-x86-64-combined-squashfs.img
           zip ./targets/openwrt-x86-64-rootfs-squashfs.zip ./targets/openwrt-x86-64-rootfs-squashfs.img
