--- a/.github/workflows/openwrt-ci-new.yml
+++ b/.github/workflows/openwrt-ci-new.yml
@@ -346,6 +346,8 @@ jobs:
           # CONFIG_PACKAGE_samba36-client is not set
           # CONFIG_PACKAGE_samba36-net is not set
           # CONFIG_PACKAGE_samba36-server is not set
+          CONFIG_PACKAGE_autocore=y
+          CONFIG_PACKAGE_automount=y
           EOF
 
           # 取消编译VMware镜像以及镜像填充 (不要删除被缩进的注释符号):
