--- a/.github/workflows/openwrt-ci-new.yml
+++ b/.github/workflows/openwrt-ci-new.yml
@@ -73,6 +73,7 @@ jobs:
 
       - name: Update feeds
         run: |
+          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
