--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -61,4 +61,6 @@ jobs:
     - name: Push Commits
       env:
         DOWNSTREAM_BRANCH: master
-      run: git push origin $DOWNSTREAM_BRANCH --tags  
+      run : |
+        git add .
+        git push origin $DOWNSTREAM_BRANCH --tags
