--- a/.github/workflows/openwrt-ci-new.yml
+++ b/.github/workflows/openwrt-ci-new.yml
@@ -14,7 +14,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: 0 16 * * *
+    - cron: 0 16 2/3 * *
   # release:
   #   types: [published]
 
